--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
 <html lang="ja">
+    <!-- Firebase SDKの読み込み -->
+<script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js"></script>
+
+<script>
+  // ここにFirebaseの設定情報を貼り付け
+  const firebaseConfig = {
+  apiKey: "AIzaSyCuJA0nFEKn7xW0JFkDvk6GPxuDUNnykhY",
+  authDomain: "todo-app-8e69e.firebaseapp.com",
+  projectId: "todo-app-8e69e",
+  storageBucket: "todo-app-8e69e.firebasestorage.app",
+  messagingSenderId: "633974812240",
+  appId: "1:633974812240:web:3d0b09b0ebdeaaba1fab55",
+  measurementId: "G-0SLJNW20ZX"
+};
+  // 初期化
+  firebase.initializeApp(firebaseConfig);
+  // Firestoreを取得
+  const db = firebase.firestore();
+</script>
 <head>
   <meta charset="UTF-8">
   <title>ToDoリスト練習アプリ</title>
