--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <!-- Firebase SDKの読み込み -->
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-firestore.js"></script>
-
+<!-- Firebase設定 & app.js -->
+<script src="app.js"></script>
 <script>
   // ここにFirebaseの設定情報を貼り付け
   const firebaseConfig = {
