--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <title>TODOリスト</title>
 </head>
 <body>
+  <button id="login-btn">Googleでログイン</button>
+  <button id="logout-btn" style="display:none;">ログアウト</button>
+  <span id="user-info"></span>
   <input id="todo-input" type="text">
   <button id="add-btn">追加</button>
   <ul id="todo-list"></ul>
 
-  <!-- 正しいFirebase v8 CDN -->
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-  <!-- あなたのアプリ本体 -->
   <script src="app.js"></script>
 </body>
 </html>
